--- a/docker-compose.mongo.3repica.yml
+++ b/docker-compose.mongo.3repica.yml
@@ -7,7 +7,7 @@ networks:
   
 services:
     mongo1:
-        image: mongo:4.2
+        image: mongo:5
         container_name: mongo1
         networks:
           - my_network
@@ -15,32 +15,35 @@ services:
         ports:
             - 27017:27017
         healthcheck:
-            test: test $$(echo "rs.initiate({_id:'rs0',members:[{_id:0,host:\"mongo1\"},{_id:1,host:\"mongo2\"},{_id:2,host:\"mongo3\"}]}).ok || rs.status().ok" | mongo --port 27017 --quiet) -eq 1
+            test: test $$(echo "rs.initiate({_id:'rs0',members:[{_id:0,host:\"mongo1:27017\"},{_id:1,host:\"mongo2:27017\"},{_id:2,host:\"mongo3:27017\"}]}).ok || rs.status().ok" | mongo --port 27017 --quiet) -eq 1
             interval: 10s
             start_period: 30s
         volumes:
             - './dataprod1:/data/db'
             - './scripts:/scripts'
+        depends_on:
+            - mongo2
+            - mongo3
 
     mongo2:
-        image: mongo:4.2
+        image: mongo:5
         container_name: mongo2
         networks:
           - my_network
         command: ["mongod", "--replSet", "rs0", "--bind_ip", "localhost,mongo2"]
-        ports:
-            - 27018:27017
+        # ports:
+        #     - 27018:27017
         volumes:
             - './dataprod2:/data/db'
 
     mongo3:
-        image: mongo:4.2
+        image: mongo:5
         container_name: mongo3
         networks:
           - my_network
         command: ["mongod", "--replSet", "rs0", "--bind_ip", "localhost,mongo3"]
-        ports:
-            - 27019:27017
+        # ports:
+        #     - 27019:27017
         volumes:
             - './dataprod3:/data/db'
 
